--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             background-color: #ff4477;
         }
         .target.circular {
-            background-color: #ff7744;
+            background-color: #00ffff;
         }
         .target:hover {
             filter: brightness(1.2);
