--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             transition: transform 0.1s ease-out;
         }
         .target.linear {
-            background-color: #ff4444;
+            background-color: pink;
         }
         .target.zigzag {
-            background-color: #ff6b6b;
+            background-color: red;
         }
         .target.sine {
-            background-color: #ff4477;
+            background-color: purple;
         }
         .target.circular {
-            background-color: #000000;
+            background-color: blue;
         }
         .target:hover {
             filter: brightness(1.2);
