--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
             margin: 0;
             overflow: hidden;
             font-family: Arial, sans-serif;
+            /* Prevent text selection for the entire body */
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
         #gameWorld {
             width: 100vw;
@@ -22,16 +27,16 @@
             transition: transform 0.1s ease-out;
         }
         .target.linear {
-            background-color: pink;
+            background-color: #ff4444;
         }
         .target.zigzag {
-            background-color: red;
+            background-color: #ff6b6b;
         }
         .target.sine {
-            background-color: purple;
+            background-color: #ff4477;
         }
         .target.circular {
-            background-color: blue;
+            background-color: #000000;
         }
         .target:hover {
             filter: brightness(1.2);
@@ -57,6 +62,11 @@
             font-size: 24px;
             text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
             z-index: 1000;
+            /* Prevent text selection */
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
         #pattern-scores {
             position: fixed;
@@ -66,6 +76,11 @@
             font-size: 16px;
             text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
             z-index: 1000;
+            /* Prevent text selection */
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
         #crosshair {
             position: fixed;
