--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,11 +7,11 @@
             margin: 0;
             overflow: hidden;
             font-family: Arial, sans-serif;
-            /* Prevent text selection for the entire body */
             user-select: none;
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
+            cursor: none; /* Hide the default cursor */
         }
         #gameWorld {
             width: 100vw;
@@ -23,7 +24,7 @@
             width: 40px;
             height: 40px;
             border-radius: 50%;
-            cursor: pointer;
+            cursor: none; /* Hide the default cursor */
             transition: transform 0.1s ease-out;
         }
         .target.linear {
@@ -62,7 +63,6 @@
             font-size: 24px;
             text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
             z-index: 1000;
-            /* Prevent text selection */
             user-select: none;
             -webkit-user-select: none;
             -moz-user-select: none;
@@ -76,7 +76,6 @@
             font-size: 16px;
             text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
             z-index: 1000;
-            /* Prevent text selection */
             user-select: none;
             -webkit-user-select: none;
             -moz-user-select: none;
@@ -84,12 +83,11 @@
         }
         #crosshair {
             position: fixed;
-            top: 50%;
-            left: 50%;
             width: 20px;
             height: 20px;
             pointer-events: none;
             z-index: 1000;
+            transform: translate(-50%, -50%); /* Center the crosshair on cursor */
         }
         #crosshair::before,
         #crosshair::after {
@@ -124,9 +122,16 @@
     <script>
         const gameWorld = document.getElementById('gameWorld');
         const scoreValue = document.getElementById('scoreValue');
+        const crosshair = document.getElementById('crosshair');
         let score = 0;
         let targets = [];
         let time = 0;
+
+        // Add mouse move event listener to update crosshair position
+        document.addEventListener('mousemove', (e) => {
+            crosshair.style.left = e.clientX + 'px';
+            crosshair.style.top = e.clientY + 'px';
+        });
 
         const audioContext = new (window.AudioContext || window.webkitAudioContext)();
 
